--- a/src/app/societe/pages/societe-dashbord/societe-dashbord.component.html
+++ b/src/app/societe/pages/societe-dashbord/societe-dashbord.component.html
@@ -1,4 +1,5 @@
-<nz-table #basicTable [nzData]="reservations" [nzPageSize]="20" [nzShowPagination]="'false'" style="padding: 20px">
+<div class="container">
+<nz-table #basicTable [nzData]="reservations" [nzPageSize]="20" [nzShowPagination]="false" style="padding: 20px">
   <thead>
     <tr>
       <th class="heading">Client Name</th>
@@ -9,23 +10,29 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let res of basicTable.data">
-      <td style="font-weight: 600">{{ res.username }}</td>
-      <td style="font-weight: 600">{{ res.serviceName }}</td>
-      <td>{{ res.dateReservation | date : "dd/MM/yyyy" }}</td>
-      <td style="font-weight: 600">{{ res.reservationStatus }}</td>
-      <td>
-        <span *ngIf="res.reservationStatus === 'ENATTENTE'">
-          <button style="margin-left: 10px" nzSize="small" nz-button nzType="primary"
-          (click)="changeReservationStatus(res.id,'APPROUVER')">
-            Approve
-          </button>
-          <button style="margin-left: 10px" nzSize="small" nz-button nzType="primary" nzDanger
-          (click)="changeReservationStatus(res.id,'REJETER')">
-            Reject
-          </button>
-        </span>
-      </td>
-    </tr>
+    <ng-container *ngFor="let res of basicTable.data">
+      <tr>
+        <td style="font-weight: 600">{{ res.username }}</td>
+        <td style="font-weight: 600">{{ res.serviceName }}</td>
+        <td>{{ res.dateReservation | date : "dd/MM/yyyy" }}</td>
+        <td style="font-weight: 600;font-size: 20px;">
+          <span *ngIf="res.reservationStatus === 'APPROUVER'" class="badge badge-success rounded-pill d-inline">Approuver</span>
+          <span *ngIf="res.reservationStatus === 'REJETER'" class="badge badge-danger rounded-pill d-inline">Rejeter</span>
+          <span *ngIf="res.reservationStatus === 'ENATTENTE'"class="badge badge-waring rounded-pill d-inline">En Attente</span>
+        </td>
+        <td>
+          <ng-container *ngIf="res.reservationStatus === 'ENATTENTE'">
+            <button style="margin-left: 10px" nzSize="small" nz-button nzType="primary"
+                    (click)="changeReservationStatus(res.id, 'APPROUVER')">
+              Approve
+            </button>
+            <button style="margin-left: 10px" nzSize="small" nz-button nzType="primary" nzDanger
+                    (click)="changeReservationStatus(res.id, 'REJETER')">
+              Reject
+            </button>
+          </ng-container>
+        </td>
+      </tr>
+    </ng-container>
   </tbody>
 </nz-table>
