--- a/src/app/client/pages/reservation-client/reservation-client.component.html
+++ b/src/app/client/pages/reservation-client/reservation-client.component.html
@@ -1,23 +1,33 @@
-<nz-table #basicTable [nzData]="reservations" [nzPageSize]="20" [nzShowPagination]="'false'" style="padding: 20px">
-  <thead>
-    <tr>
-      <th class="heading">Service</th>
-      <th class="heading">Date</th>
-      <th class="heading">Status</th>
-      <th class="heading">Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let res of basicTable.data">
-      <td style="font-weight: 600">{{ res.serviceName }}</td>
-      <td>{{ res.dateReservation | date : "dd/MM/yyyy" }}</td>
-      <td style="font-weight: 600">{{ res.reservationStatus }}</td>
-
-        <span *ngIf="res.reviewStatus=='FAUX' && res.reservationStatus!=='REJETER'">
-          <td style="font-weight: 600">
-            <button style="margin-left: 10px;margin-left: 15px;" nz-button  nzDanger nzType="primary" routerLink="/client/review/{{res.id}}">Review</button>
-          </td>
-        </span>
-    </tr>
-  </tbody>
-</nz-table>
+<div class="reservation-container">
+  <nz-table #basicTable [nzData]="reservations" [nzPageSize]="20" [nzShowPagination]="false">
+    <thead>
+      <tr>
+        <th class="heading">Service</th>
+        <th class="heading">Date</th>
+        <th class="heading">Status</th>
+        <th class="heading">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let res of basicTable.data">
+        <td class="font-weight-bold">{{ res.serviceName }}</td>
+        <td>{{ res.dateReservation | date: 'dd/MM/yyyy' }}</td>
+        <td class="font-weight-bold">
+          <span
+            class="badge"
+            [ngClass]="{
+              'badge-success': res.reservationStatus === 'APPROUVER',
+              'badge-danger': res.reservationStatus === 'REJETER',
+              'badge-warning': res.reservationStatus === 'ENATTENTE'
+            }"
+          >
+            {{ res.reservationStatus }}
+          </span>
+        </td>
+        <td *ngIf="res.reviewStatus === 'FAUX' && res.reservationStatus !== 'REJETER'">
+          <button nz-button nzType="primary" nzDanger routerLink="/client/review/{{ res.id }}">Review</button>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
+</div>
