--- a/src/app/societe/pages/societe-dashbord/societe-dashbord.component.scss
+++ b/src/app/societe/pages/societe-dashbord/societe-dashbord.component.scss
@@ -2,3 +2,29 @@
   font-weight: bold;
   color:#003973
 }
+
+
+.badge-success {
+  background-color: #28a745;
+  color: white;
+}
+
+.badge-danger {
+  background-color: #dc3545;
+  color: white;
+}
+.badge-warning {
+  background-color: #ffb259;
+  color: white;
+}
+
+.badge {
+  padding: 0.25em 0.4em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.375rem;
+}
